# Configuring setuptools using `setup.cfg` files:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = budg
version = attr: budg.__version__
description = The Modern, Extensible Static Site Generator
long_description = file: README.md
long_description_content_type = text/markdown
author = Fares Ahmed
author_email = fares@duck.com
maintainer = Fares Ahmed
maintainer_email = fares@duck.com
url = https://github.com/faresbakhit/budg
download_url = https://github.com/faresbakhit/budg/releases
platforms = any
keywords = SSG, HTML, Blog, Website, Markdown
license = BSD 0-Clause License
license_files = LICENSE

[options]
packages = budg
python_requires = >=3.11

[options.extras_require]
dev =
    black == 23.7.0
    flake8 == 6.1.0
    isort == 5.12.0
    mypy == 1.5.0

[options.entry_points]
console_scripts =
    budg = budg.main:main
